[package]
name = "sonic-soil"
version = "0.1.0"
edition = "2021"

[dependencies]
sonor = "2.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"